// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Item Tests Renders correctly with category 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "gray",
      "borderBottomWidth": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 24,
        }
      }
    >
      Item
    </Text>
    <Text
      style={
        Object {
          "fontSize": 24,
        }
      }
    >
      12.34
    </Text>
  </View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      Category
    </Text>
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      1/1/22
    </Text>
  </View>
</View>
`;

exports[`List Item Tests Renders correctly with category 2`] = `
<View
  style={
    Object {
      "borderBottomColor": "gray",
      "borderBottomWidth": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 24,
        }
      }
    >
      Item
    </Text>
    <Text
      style={
        Object {
          "fontSize": 24,
        }
      }
    >
      12.34
    </Text>
  </View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      1/1/22
    </Text>
  </View>
</View>
`;
